# subhuti-app

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  ENGINEERING_SUMMARY.md  Makefile  README.md  RELEASE_TEST_REPORT.md  test_expert.sh
.codebuddy/memory/: 2026-06-28.md
config/: Subhuti.toml  mock_responses.json
crates/subhuti/: Cargo.toml  大纲.md  执行链路.md  技能.md  框架改进路线图.md
crates/subhuti-expert-psychology/: Cargo.toml
crates/subhuti/data/: persona.json
crates/subhuti/src/: context.rs  debug.rs  lib.rs
crates/subhuti/src/db/: mod.rs
crates/subhuti/src/expert/: mod.rs  planning.rs
crates/subhuti/src/extension/: mod.rs
crates/subhuti/src/flow/: mod.rs  plan_act.rs  react.rs  simple.rs
crates/subhuti/src/memory/: convo_miner.rs  dedup.rs  dynamics.rs  embedding.rs  entities.rs  fact_checker.rs  hybrid_search.rs  knowledge.rs  knowledge_graph.rs  layers.rs  long_term.rs  mod.rs  palace_graph.rs  short_term.rs  storage.rs
crates/subhuti/src/observe/: mod.rs  session.rs  trace.rs
crates/subhuti/src/orchestrator/: mod.rs
crates/subhuti/src/orchestrator/strategies/: critique_revise.rs  manager_worker.rs  map_reduce.rs  mod.rs  pipeline.rs  simple_dispatch.rs
crates/subhuti/src/runtime/: constraints.rs  error.rs  mod.rs  session.rs
crates/subhuti/src/runtime/llm/: client.rs  mod.rs  retry.rs
crates/subhuti/src/runtime/tools/: mod.rs
crates/subhuti/src/skill/: mod.rs
crates/subhuti/src/soul/: mod.rs  palace.rs
crates/subhuti/tests/: integration_test.rs  performance_test.rs  test_debug_tools.rs  test_hook_chain.rs  test_llm_mock.rs
data/: persona.json
docs/: API_TUTORIAL.md  ARCHITECTURE.md  DEBUG_TOOLS.md  DEBUG_TOOLS_GUIDE.md  DEBUG_TOOLS_SUMMARY.md  INTEGRATION_TEST_REPORT.md  ONLINE_DEBUG_GUIDE.md  ORCHESTRATOR_DESIGN.md  QUICKSTART.md  README.md  ROADMAP.md  SCRIPTS_REFERENCE.md  USER_GUIDE.md  未来.md
docs/releases/: AI_QUICK_REFERENCE.md  INDEX.md  README.md  SCRIPT_REFACTOR.md  STANDARD_WORKFLOW.md  TAG_MANAGEMENT.md  TEMPLATE_DESIGN.md  TEMPLATE_RELEASE_CHECKLIST.md  TEMPLATE_REQUIREMENTS.md  TEMPLATE_TEST_CASES.md  VERSION_WORKFLOW.md
docs/releases/v0.1.0/: REQUIREMENTS.md
scripts/: README.md  cleanup-dsstore.sh  log_query.sh  pre-commit
scripts/debug/: format-trace.sh  online-debug.sh
scripts/release/: auto-release.sh  release-test.sh
scripts/test/: test_expert_v2.sh  version-test-enhanced.sh  version-test-template.sh  version-test-v0.2.0.sh
src/: config.rs  main.rs  middleware.rs  server.rs
static/: index.html
(+64 files in other folders)
