[workspace]
members = [
    "crates/subhuti",
    "crates/subhuti-expert-psychology",
]
resolver = "2"

[package]
name = "subhuti-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sync_test"
path = "src/bin/sync_test.rs"

[[bin]]
name = "http_server"
path = "src/bin/http_server/main.rs"

[[bin]]
name = "subhuti"
path = "src/bin/cli/main.rs"

[dependencies]
subhuti = { path = "crates/subhuti" }
subhuti-expert-psychology = { path = "crates/subhuti-expert-psychology" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Axum HTTP 框架
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower-layer = "0.3"

# HTTP 客户端（用于调用外部 LLM API）
reqwest = { version = "0.12", features = ["json"] }

# 工具库
futures = "0.3"

# 环境变量加载
dotenvy = "0.15"

# TOML 配置解析
toml = "0.8"

# UUID 生成
uuid = { version = "1", features = ["v4"] }

# SSE 支持
async-stream = "0.3"
tokio-stream = "0.1"